# fractal_generator

./: .clang-format  .gitignore  BitMap.cpp  Bitmap.hpp  BitmapFileHeader.hpp  BitmapInfoHeader.hpp  CMakeLists.txt  README.md  main.cpp
include/: Bitmap.hpp  BitmapFileHeader.hpp  BitmapInfoHeader.hpp  Fractal.hpp  Mandelbrot.hpp  RGB.hpp  Range.hpp  Zoom.hpp  ZoomList.hpp
src/: BitMap.cpp  CMakeLists.txt  Fractal.cpp  Mandelbrot.cpp  RGB.cpp  ZoomList.cpp  main.cpp
tests/: CMakeLists.txt  hello_test.cc  test_RGB.cpp  test_catch.cpp  test_fractal.cpp  test_mandelbrot.cpp  test_zoom.cpp
